# inireader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  inireader.hpp
.github/workflows/: build-linux.yml  build-windows.yml  test-linux.yml  test-macos.yml  test-windows.yml
include/inireader/: conversion.hpp  inireader.hpp  number_conversion.hpp  string_conversion.hpp
test/: CMakeLists.txt  test.cpp  test.ini  test_add.cpp  test_conversion.cpp  test_ctx.hpp  test_edit.cpp  test_has.cpp  test_main.cpp  test_parse.cpp  test_remove.cpp
